--- a/.github/workflows/gradle.yaml
+++ b/.github/workflows/gradle.yaml
@@ -72,7 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        gradle: [ '9.2.0', '9.1.0', '9.0.0', '8.13', '8.12.1', '8.11.1', '8.10.2', '8.9', '8.8', '8.7', '8.6', '8.5' ]
+        gradle: [ '9.2.0', '9.1.0', '9.0.0', '8.14.4', '8.13', '8.12.1', '8.11.1', '8.10.2', '8.9', '8.8', '8.7', '8.6', '8.5' ]
     steps:
       - uses: actions/checkout@v6
 
